wip: setting up custom web component

--- a/templates/content/node--ucb-class-notes-list-page.html.twig
+++ b/templates/content/node--ucb-class-notes-list-page.html.twig
@@ -27,5 +27,5 @@
     'base-uri': url('<front>')|render|trim('/') ~ '/jsonapi',
 })}}>
     <noscript><div class="ucb-list-msg ucb-error">Please enable JavaScript to see this page.</div></noscript>
-  </ucb-class-notes>
+  </ucb-class-notes-list>
 </article>
