--- a/templates/content/node--ucb-class-notes-list-page.html.twig
+++ b/templates/content/node--ucb-class-notes-list-page.html.twig
@@ -1,4 +1,7 @@
-
+{# 
+  
+  http://localhost:50282/jsonapi/node/ucb_class_notes
+  #}
 {{ attach_library('boulder_base/ucb-class-notes-list-page') }}
 
 {% set classes = [
@@ -11,6 +14,12 @@
   view_mode ? 'node--view-mode-' ~ view_mode|clean_class,
   'ucb-content-wrapper'
  ] %}
+
+
+ {% set PublishedFilter = '&filter[publish-check][condition][path]=status'
+  ~ '&filter[publish-check][condition][value]=1'
+  ~ '&filter[publish-check][condition][memberOf]=published'
+%}
  
 <article{{ attributes.addClass(classes) }}>
   <div class="ucb-class-notes-list-title">
@@ -24,7 +33,7 @@
   </div>
   {% endif %}
   <ucb-class-notes-list{{ create_attribute({
-    'base-uri': url('<front>')|render|trim('/') ~ '/jsonapi',
+    'base-uri': url('<front>')|render|trim('/') ~ '/jsonapi/node/ucb_class_notes?filter[field_ucb_class_year]=',
 })}}>
     <noscript><div class="ucb-list-msg ucb-error">Please enable JavaScript to see this page.</div></noscript>
   </ucb-class-notes-list>
