--- a/css/ucb-class-notes-list.css
+++ b/css/ucb-class-notes-list.css
@@ -17,3 +17,18 @@
   .ucb-loading-data[hidden] {
     display: none;
   }
+
+.class-notes-list-filter{
+  display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    padding: 10px;
+    border: 1px solid rgba(128, 128, 128, 0.333);
+    min-width: auto;
+}
+
+.ucb-class-notes-filter-label{
+  font-size: 85%;
+    font-weight: 600;
+}
