--- a/css/ucb-class-notes-list.css
+++ b/css/ucb-class-notes-list.css
@@ -32,3 +32,9 @@
   font-size: 85%;
     font-weight: 600;
 }
+
+.ucb-class-notes-view-all-container{
+  flex: 1;
+  text-align: right;
+  font-size: 85%;
+}
