--- a/templates/content/node--ucb-class-notes-list-page.html.twig
+++ b/templates/content/node--ucb-class-notes-list-page.html.twig
@@ -36,5 +36,6 @@
     'base-uri': url('<front>')|render|trim('/') ~ '/jsonapi/node/ucb_class_notes',
 })}}>
     <noscript><div class="ucb-list-msg ucb-error">Please enable JavaScript to see this page.</div></noscript>
+    <div class="ucb-class-notes-list-container"></div>
   </ucb-class-notes-list>
 </article>
