--- a/css/ucb-class-notes-list.css
+++ b/css/ucb-class-notes-list.css
@@ -71,6 +71,27 @@
   text-align: right;
   font-size: 85%;
 }
+.ucb-class-notes-read-more-container{
+  text-align: center;
+}
+.ucb-class-notes-read-more{
+  padding: 5px 10px;
+    font-weight: bold;
+    font-family: "Roboto","Helvetica Neue",Helvetica,Arial,sans-serif;
+    margin-bottom: 5px;
+    background-clip: padding-box;
+    color: #0277BD !important;
+    border: 1px solid #0277BD;
+    border-radius: 0px;
+    background-color: transparent;
+    text-decoration: none;
+}
+
+.ucb-class-notes-read-more:hover {
+  transition: background-color 0.25s ease,border-color 0.25s ease,color 0.25s ease;
+  background-color: #0277BD;
+  color: white !important;
+}
 
 @media only screen and (max-width: 525px) {
   .ucb-class-notes-view-all-container{
