--- a/templates/paragraphs/paragraph--ucb-faq-section.html.twig
+++ b/templates/paragraphs/paragraph--ucb-faq-section.html.twig
@@ -4,7 +4,7 @@
       'paragraph--type--' ~ paragraph.bundle|clean_class,
       view_mode ? 'paragraph--view-mode--' ~ view_mode|clean_class,
       not paragraph.isPublished() ? 'paragraph--unpublished',
-      'accordian'
+      'accordion'
     ]
   %}
 
@@ -29,3 +29,5 @@
     </div>
   {% endfor %}
 </div>
+
+
