wip: adjusts answer field to wysiwyg

--- a/templates/paragraphs/paragraph--ucb-faq-section.html.twig
+++ b/templates/paragraphs/paragraph--ucb-faq-section.html.twig
@@ -22,7 +22,7 @@
       <div id="{{ unique_id }}" class="accordion-collapse collapse" aria-labelledby="heading-{{ unique_id }}" data-bs-parent="#accordion-{{ paragraph.id() }}">
         <div class="accordion-body" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer">
           <div itemprop="text">
-            {{ item.entity.field_ucb_faq_answer.value }}
+            {{ item.entity.field_ucb_faq_answer.processed }}
           </div>
         </div>
       </div>
