Replace layout-container class
These pages need the `layout-container` class again from switching to stable9 from claro

--- a/templates/layout/page--403.html.twig
+++ b/templates/layout/page--403.html.twig
@@ -44,7 +44,7 @@
  */
 #}
 
-<div class="ucb-page-container">
+<div class="layout-container ucb-page-container">
   {{ block("page_header", "page.html.twig") }}
   <div{{ create_attribute({ class: ['ucb-page-content', ucb_heading_font == 'normal' ? 'ucb-heading-font-normal'] }) }}>
     {{ page.highlighted }}
