--- a/css/style.css
+++ b/css/style.css
@@ -321,6 +321,41 @@ ul.ucb-main-menu.nav {
 }
 
 /****** Local Tasks ********/
+.ucb-local-tasks {
+  top: 0;
+  width: 100%;
+  background-color: var(--ucb-link);
+  z-index: 99;
+  height: 32px;
+  padding: 0;
+  margin: 0;
+}
+
+.ucb-local-tasks ul {
+  display: flex;
+  list-style-type: none;
+  align-items: center;
+  justify-content: flex-start;
+  padding: 0;
+  margin: 0;
+}
+
+.ucb-local-tasks ul li {
+  width: 100px;
+  padding: 0.25em;
+  text-align: center;
+  background-color: inherit;
+  color: inherit;
+}
+
+.ucb-local-tasks ul li:hover {
+  background-color: rgba(255 255 255 / 15%);
+  transition: background-color 200ms;
+}
+
+.ucb-local-tasks li>a:hover {
+  color: #fff;
+}
 
 
 /********* Footer ***********/
