Some cleanup post-testing

--- a/templates/content/node--ucb-faq-page.html.twig
+++ b/templates/content/node--ucb-faq-page.html.twig
@@ -24,6 +24,7 @@
     </div>
     {% endif %}
     <div class="ucb-newsletter-section-content">
+      {# Individual FAQ sections -- paragraph--ucb-faq-section.html.twig #}
         {% if content.field_ucb_faq_page_section|render %}
           <div class="ucb-faq-page-section-body">
             {{ content.field_ucb_faq_page_section|render }}
