--- a/templates/field/field--field_collection_grid_type.html.twig
+++ b/templates/field/field--field_collection_grid_type.html.twig
@@ -1,3 +1,6 @@
+{% set allTypes = "" %}
 {% for item in items %}
-	{{ item.content }}
+	{% set allTypes = allTypes ~ item.content['#plain_text']|join('') ~ ',' %}
 {% endfor %}
+{% set allTypes = allTypes|slice(0,-1) %}
+{{ allTypes }}
