--- a/css/block/ucb-collections-block.css
+++ b/css/block/ucb-collections-block.css
@@ -15,20 +15,21 @@
     font-weight: bold;
     margin-bottom: 5px;
     text-decoration: none !important;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
     border-radius: 3px;
-    -webkit-background-clip: padding-box;
-    -moz-background-clip: padding;
     background-clip: padding-box;
-    -webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-    -moz-box-shadow: 0 1px 2px rgba(0,0,0,0.2);
     box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-    transition: -webkit-box-shadow 0.5s ease,background-color 0.5s ease,color 0.5s ease;
-    transition: -moz-box-shadow 0.5s ease,background-color 0.5s ease,color 0.5s ease;
     transition: box-shadow 0.5s ease,background-color 0.5s ease,color 0.5s ease;
     background-color: #EEEEEE;
     color: #111111 !important;
+
+    background: #EEEEEE;
+    font-size: 85%;
+    font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    border: 1px solid #ddd;
+}
+.category-filter-reset:hover {   
+    background-color: #d6d6d6;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
 }
 .collections-item-block {
     border: 1px solid #e7e7e7;
