--- a/templates/block/block--collection-grid.html.twig
+++ b/templates/block/block--collection-grid.html.twig
@@ -37,6 +37,11 @@
   {% endif %}
 
 
+  {% set displayStyle = "show" %}
+  {% if content.field_collections_display|render|striptags|trim == "Hide" %}
+      {% set displayStyle = "hide" %}
+  {% endif %}
+
 {{ attach_library('boulder_base/ucb-collections-block') }}
 {% block content %}
 	<div{{attributes.addClass(classes)}}>
@@ -44,18 +49,21 @@
 
   <div class = "collection-grid-container {{filterItemsStyle}} {{mutliselectStyle}}">
 		<div class="collections-filter-list">
+
+				{% for key, item in content['#block_content'].field_collection_category_select %}
+					{%  if key|first != '#' %}
+              {{item.entity.collection-grid-filter.entity.field_collection_grid_label.entity.content }}
+					{% endif %}
+				{% endfor %}
 			{{ content.field_collection_category_select}}
 			{#<input type="reset" value="Reset Filters" class="category-filter-reset" onclick = "resetFilters()" ></input>#}
-	</div>
-	<div id="collections-grid-block-data" 
-  data-jsonapi="{{ collectionsJSON }}"
-  data-jsonCats="{{ collectionsCatsJSON }}"
-  data-currentCats="1,3,5,6,7,8,9,11"
-  data-exTags= "2,4,10"
-  class = "collections-grid-block-data">
-	</div>
+	  </div>
+    <div id="collections-grid-block-data" 
+    data-jsonapi="{{ collectionsJSON }}"
+    data-jsonCats="{{ collectionsCatsJSON }}"
+    data-exTags= "{{ content.field_collection_grid_type|render|striptags|trim}}"
+    data-bodyDisplay = {{ displayStyle }}
+    class = "collections-grid-block-data">
+    </div>
   </div>
-<div class = "checkArea" >
-  {{ content.field_collection_grid_type }}
-</div>
 {% endblock content %}
