--- a/css/migrate-list-styles.css
+++ b/css/migrate-list-styles.css
@@ -1,4 +1,3 @@
-/* List styles */
 
 ol {
     list-style: decimal;
@@ -85,56 +84,55 @@ ul.list-style-border > li {
 }
 
 ul.list-style-icon-1, ul.list-style-icon-2, ul.list-style-icon-3, ul.list-style-icon-4, ul.list-style-icon-5, ul.list-style-icon-6, ul.list-style-icon-check, ul.list-style-icon-checkbox, ul.list-style-icon-angle-double, ul.list-style-icon-circle-arrow, ul.list-style-icon-star, ul.list-style-icon-finger {
-    list-style: none;
-    list-style-image: none;
-    overflow: hidden;
+    list-style: none !important;
+    list-style-image: none !important;
+    overflow: hidden !important;
 }
 
 ul.list-style-icon-1 > li, ul.list-style-icon-2 > li, ul.list-style-icon-3 > li, ul.list-style-icon-4 > li, ul.list-style-icon-5 > li, ul.list-style-icon-6 > li, ul.list-style-icon-check > li, ul.list-style-icon-checkbox > li, ul.list-style-icon-angle-double > li, ul.list-style-icon-circle-arrow > li, ul.list-style-icon-star > li, ul.list-style-icon-finger > li {
     list-style: none !important;
     list-style-image: none !important;
-    position: relative;
+    position: relative !important;
 }
 
 ul.list-style-icon-1 li:before, ul.list-style-icon-2 li:before, ul.list-style-icon-3 li:before, ul.list-style-icon-4 li:before, ul.list-style-icon-5 li:before, ul.list-style-icon-6 li:before, ul.list-style-icon-check li:before, ul.list-style-icon-checkbox li:before, ul.list-style-icon-angle-double li:before, ul.list-style-icon-circle-arrow li:before, ul.list-style-icon-star li:before, ul.list-style-icon-finger li:before {
-    font-family: "Font Awesome 5 Free", "FontAwesome";
-    position: absolute;
-    top: 0;
-    left: -20px;
+    font-family: "Font Awesome 6 Free";
+    position: absolute !important;
+    top: 0 !important;
+    left: -20px !important;
     color: #cfb87c;
 }
 
 ul.list-style-icon-1 > li:before, ul.list-style-icon-check > li:before {
-    content: '\f00c';
-    font-weight: 900;
+    content: '\f00c' !important;
+    font-weight: 900 !important;
 }
 
 ul.list-style-icon-2 > li:before, ul.list-style-icon-checkbox > li:before {
-    content: '\f14a';
-    font-weight: 900;
+    content: '\f14a' !important;
+    font-weight: 900 !important;
 }
 
 ul.list-style-icon-3 > li:before, ul.list-style-icon-angle-double > li:before {
-    content: '\f101';
-    font-weight: 900;
+    content: '\f101' !important;
+    font-weight: 900 !important;
 }
 
 ul.list-style-icon-4 > li:before, ul.list-style-icon-circle-arrow > li:before {
-    content: '\f0a9';
-    font-weight: 900;
+    content: '\f0a9' !important;
+    font-weight: 900 !important;
 }
 
 ul.list-style-icon-5 > li:before, ul.list-style-icon-star > li:before {
-    content: '\f005';
-    font-weight: 900;
+    content: '\f005' !important;
+    font-weight: 900 !important;
 }
 
 ul.list-style-icon-6 > li:before, ul.list-style-icon-finger > li:before {
-    content: '\f0a4';
-    font-weight: 900;
+    content: '\f0a4' !important;
+    font-weight: 900 !important;
 }
 
-/* ORDERED LIST STYLES */
 ol.list-style-alpha-upper, ol.list-style-alpha-upper > li {
     list-style: upper-alpha;
 }
