--- a/css/styleguide/type.css
+++ b/css/styleguide/type.css
@@ -90,8 +90,7 @@ code { font-family: monospace; font-size: 85%; }
 
 pre { white-space: pre-wrap; }
 
-/** List styles */
-ol { list-style: decimal; }
+/* ol { list-style: decimal; }
 
 ul { list-style: disc; }
 
@@ -119,9 +118,9 @@ ul.list-style-underline > li { list-style: none; border-bottom: 1px solid rgba(1
 
 ul.list-style-border { list-style: none; list-style-image: none; padding-left: 0; border-top: 1px solid rgba(128, 128, 128, 0.333); }
 
-ul.list-style-border > li { list-style: none; border: 1px solid rgba(128, 128, 128, 0.333); border-top: none; padding: 10px; margin-bottom: 0; }
+ul.list-style-border > li { list-style: none; border: 1px solid rgba(128, 128, 128, 0.333); border-top: none; padding: 10px; margin-bottom: 0; } */
 
-ul.list-style-icon-1, ul.list-style-icon-2, ul.list-style-icon-3, ul.list-style-icon-4, ul.list-style-icon-5, ul.list-style-icon-6, ul.list-style-icon-check, ul.list-style-icon-checkbox, ul.list-style-icon-angle-double, ul.list-style-icon-circle-arrow, ul.list-style-icon-star, ul.list-style-icon-finger { list-style: none; list-style-image: none; overflow: hidden; }
+/* ul.list-style-icon-1, ul.list-style-icon-2, ul.list-style-icon-3, ul.list-style-icon-4, ul.list-style-icon-5, ul.list-style-icon-6, ul.list-style-icon-check, ul.list-style-icon-checkbox, ul.list-style-icon-angle-double, ul.list-style-icon-circle-arrow, ul.list-style-icon-star, ul.list-style-icon-finger { list-style: none; list-style-image: none; overflow: hidden; }
 ul.list-style-icon-1 > li, ul.list-style-icon-2 > li, ul.list-style-icon-3 > li, ul.list-style-icon-4 > li, ul.list-style-icon-5 > li, ul.list-style-icon-6 > li, ul.list-style-icon-check > li, ul.list-style-icon-checkbox > li, ul.list-style-icon-angle-double > li, ul.list-style-icon-circle-arrow > li, ul.list-style-icon-star > li, ul.list-style-icon-finger > li { list-style: none !important; list-style-image: none !important; position: relative; }
 ul.list-style-icon-1 li:before, ul.list-style-icon-2 li:before, ul.list-style-icon-3 li:before, ul.list-style-icon-4 li:before, ul.list-style-icon-5 li:before, ul.list-style-icon-6 li:before, ul.list-style-icon-check li:before, ul.list-style-icon-checkbox li:before, ul.list-style-icon-angle-double li:before, ul.list-style-icon-circle-arrow li:before, ul.list-style-icon-star li:before, ul.list-style-icon-finger li:before { font-family: "Font Awesome 6 Free"; position: absolute; top: 0; left: -20px; color: #cfb87c; }
 
@@ -135,10 +134,9 @@ ul.list-style-icon-4 > li:before, ul.list-style-icon-circle-arrow > li:before { 
 
 ul.list-style-icon-5 > li:before, ul.list-style-icon-star > li:before { content: '\f005'; font-weight: 900; }
 
-ul.list-style-icon-6 > li:before, ul.list-style-icon-finger > li:before { content: '\f0a4'; font-weight: 900; }
+ul.list-style-icon-6 > li:before, ul.list-style-icon-finger > li:before { content: '\f0a4'; font-weight: 900; } */
 
-/* ORDERED LIST STYLES */
-ol.list-style-alpha-upper, ol.list-style-alpha-upper > li { list-style: upper-alpha; }
+/* ol.list-style-alpha-upper, ol.list-style-alpha-upper > li { list-style: upper-alpha; }
 
 ol.list-style-alpha-lower, ol.list-style-alpha-lower > li { list-style: lower-alpha; }
 
@@ -158,4 +156,4 @@ ul.list-style-linear-dots { margin: 0 0 20px 0; padding: 0; list-style: none; ov
 ul.list-style-linear-dots > li { list-style: none; float: left; padding-left: 8px; }
 ul.list-style-linear-dots > li:first-child { padding-left: 0; }
 ul.list-style-linear-dots > li:before { content: "•"; padding-right: 8px; }
-ul.list-style-linear-dots > li:first-child:before { content: none; padding: 0; }
+ul.list-style-linear-dots > li:first-child:before { content: none; padding: 0; } */
