--- a/css/migrate-list-styles.css
+++ b/css/migrate-list-styles.css
@@ -3,6 +3,7 @@
 *   - style.css (lines 705 - 835)
 *   - styleguide/type.css (lines 97 - 159)
 */
+
 ol {
     list-style: decimal;
 }
@@ -100,7 +101,7 @@ ul.list-style-icon-1 > li, ul.list-style-icon-2 > li, ul.list-style-icon-3 > li,
 }
 
 ul.list-style-icon-1 li:before, ul.list-style-icon-2 li:before, ul.list-style-icon-3 li:before, ul.list-style-icon-4 li:before, ul.list-style-icon-5 li:before, ul.list-style-icon-6 li:before, ul.list-style-icon-check li:before, ul.list-style-icon-checkbox li:before, ul.list-style-icon-angle-double li:before, ul.list-style-icon-circle-arrow li:before, ul.list-style-icon-star li:before, ul.list-style-icon-finger li:before {
-    font-family: "Font Awesome 6 Free";
+    font-family: "Font Awesome 6 Free - Solid" !important;
     position: absolute !important;
     top: 0 !important;
     left: -20px !important;
@@ -209,3 +210,4 @@ ul.list-style-linear-dots > li:first-child:before {
     content: none;
     padding: 0;
 }
+
