--- a/css/style.css
+++ b/css/style.css
@@ -344,7 +344,7 @@ ul.ucb-main-menu.nav {
   width: 100%;
   background-color: var(--ucb-link);
   z-index: 99;
-  height: 32px;
+  height: 2.5em;
   padding: 0;
   margin: 0;
 }
@@ -352,6 +352,8 @@ ul.ucb-main-menu.nav {
 .ucb-local-tasks ul {
   display: flex;
   list-style-type: none;
+  height: 2.5em;
+  line-height: 1.25em;
   align-items: center;
   justify-content: flex-start;
   padding: 0;
