fix padding on labels, collection error

--- a/css/block/ucb-collections-block.css
+++ b/css/block/ucb-collections-block.css
@@ -7,6 +7,7 @@
    white-space: normal;
    font-weight: normal;
    padding-left: 2px;
+   padding-top: 5px;
 }
 .category-checkbox {
     margin:  6px 10px 0 0;
