--- a/templates/block/block--collection-grid.html.twig
+++ b/templates/block/block--collection-grid.html.twig
@@ -87,11 +87,11 @@
 								<h3 class="category-filter-label">{{item.entity.field_collection_filter_label.value }}
 								</h3>
 								<div class="collection-category-container">
-									{% for key, cat in item.entity.field_collection_grid_category %}
-										{%  if key|first != '#' %}
+									{% for key2, cat in item.entity.field_collection_grid_category %}
+										{%  if key2|first != '#' %}
 											<div class="collection-category-line">
-												<input class="category-checkbox category-checkbox-{{ blockID }}" type="checkbox" data-category="{{ cat|view }}" onclick="filterChecked({{ blockID }})">
-												<label class="category-label category-label-{{ cat|view }}-{{ blockID }}" data-category="{{ cat|view }}-label">{{ cat|view }}</label>
+												<input class="category-checkbox category-checkbox-{{blockID}}-{{key}}-{{key2}} category-checkbox-{{ blockID }}" type="checkbox" data-category="{{ cat|view }}" onclick="filterChecked({{ blockID }})">
+												<a onclick = "filterLabelChecked({{blockID}},{{key}}, {{key2}})"><label class="category-label category-label-{{ cat|view }}-{{ blockID }}" data-category="{{ cat|view }}-label">{{ cat|view }}</label></a>
 											</div>
 										{% endif %}
 									{% endfor %}
