--- a/templates/block/block--collection-grid.html.twig
+++ b/templates/block/block--collection-grid.html.twig
@@ -18,7 +18,10 @@
 {% set collectionsJSON = (url('<front>')|render|trim('/'))
     ~ '/jsonapi/node/collection_item_page'
     ~ '?include=field_collection_item_thumbnail.field_media_image'
-    ~ '&fields[file--file]=uri,url'
+    ~ '&fields[file--file]=uri,url,alt'
+  %}
+
+{% set baseurlJSON = (url('<front>')|render|trim('/'))
   %}
 
 {% set includeTags = "" %}
@@ -108,7 +111,7 @@
 			<div class="collection-grid-filter-checks">
 			<span class = "collection-grid-filter-span-{{ blockID }}"></span>
 			</div>
-			<div id="collections-grid-block-data-{{blockID}}" data-jsonapi="{{ collectionsJSON }}" data-jsoncats="{{ collectionsCatsJSON }}" data-extags="{{ content.field_collection_grid_type|render|striptags|trim}}" data-bodydisplay="{{ displayStyle }}" class="collections-grid-block-data"></div>
+			<div id="collections-grid-block-data-{{blockID}}" data-jsonapi="{{ collectionsJSON }}" data-jsoncats="{{ collectionsCatsJSON }}" data-extags="{{ content.field_collection_grid_type|render|striptags|trim}}" data-bodydisplay="{{ displayStyle }}" data-baseurl = {{ baseurlJSON}} class="collections-grid-block-data"></div>
 		</div>
 	</div>
 {% endblock content %}
